--- a/hidden_serach/style.css
+++ b/hidden_serach/style.css
@@ -7,6 +7,22 @@
   --background: #a8dbab;
 }
 
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color  : var(--text);
+  opacity: 1;  /* Firefox */
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: var(--text);
+}
+
+::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: var(--text);
+}
+
 * {
   box-sizing: border-box;
 }
@@ -14,10 +30,61 @@
 body {
   font-family    : "Roboto", sans-serif;
   display        : flex;
-  flex-direction : column;
   align-items    : center;
   justify-content: center;
   height         : 100vh;
   overflow       : hidden;
   margin         : 0;
+
+  background-color: var(--background);
+
+}
+
+.search {
+  position: relative;
+  height  : 50px;
+}
+
+.search .input {
+  background-color: var(--box);
+  font-size       : 18px;
+
+  border : 0;
+  height : 50px;
+  width  : 15px;
+  padding: 15px;
+
+  transition: width 0.3s ease;
+}
+
+.btn {
+  background-color: var(--box);
+  border          : 0;
+  cursor          : pointer;
+  font-size       : 24px;
+  position        : absolute;
+
+  top   : 0;
+  left  : 0;
+  height: 50px;
+  width : 50px;
+
+  transition: transform 0.3s ease;
+}
+
+.btn:focus,
+.input:focus {
+  outline: none;
+}
+
+.fas {
+  color: var(--text);
+}
+
+.search.active .input {
+  width: 200px;
+}
+
+.search.active .btn {
+  transform: translateX(198px);
 }
